--- a/index1.html
+++ b/index1.html
@@ -9,7 +9,7 @@
 <body>
     <section>
         <header>
-            <h3 class="logo">DR.DOOMSDAY</h3>
+            <h3 class="logo">DOOMSDAY</h3>
             <nav>
                 <ul>
                     <li><a href="">Marvel</a></li>
